--- a/readme
+++ b/readme
@@ -15,3 +15,10 @@ docker exec -it es-node01 /usr/share/elasticsearch/bin/elasticsearch-reset-passw
 token:
 docker exec -it es-node01 /usr/share/elasticsearch/bin/elasticsearch-create-enrollment-token -s kibana
 
+
+
+install docker:
+sudo apt update
+sudo apt  install docker.io
+sudo chown ubuntu:ubuntu /var/run/docker.sock
+sudo sysctl -w vm.max_map_count=262144
