--- a/readme
+++ b/readme
@@ -22,3 +22,9 @@ sudo apt update
 sudo apt  install docker.io
 sudo chown ubuntu:ubuntu /var/run/docker.sock
 sudo sysctl -w vm.max_map_count=262144
+
+
+setup elk:
+git lcone https://github.com/qf-devops/docker-elastic.git
+cd docker-elastic
+sh deployStack.sh
