--- a/readme
+++ b/readme
@@ -27,6 +27,21 @@ sudo sysctl -w vm.max_map_count=262144
 setup elk:
 git lcone https://github.com/qf-devops/docker-elastic.git
 cd docker-elastic
+
+Edit deployStack.sh:
+
+            #!/bin/bash
+
+            export ELASTIC_VERSION=7.9.1
+            export ELASTICSEARCH_USERNAME=elastic
+            export ELASTICSEARCH_PASSWORD=changeme
+            export ELASTICSEARCH_HOST=ip-172-31-10-180
+            export INITIAL_MASTER_NODES=ip-172-31-10-180
+
+            docker network create --driver overlay --attachable elastic
+            docker stack deploy --compose-file docker-compose.yml elastic
+
+
 sh deployStack.sh
 
 
