--- a/readme
+++ b/readme
@@ -4,11 +4,11 @@ installation steps:
 es:
 docker network create elastic
 docker pull docker.elastic.co/elasticsearch/elasticsearch:8.6.1
-docker run --name es-node01 --net elastic -p 9200:9200 -p 9300:9300 -t docker.elastic.co/elasticsearch/elasticsearch:8.6.1
+docker run -itd --name es-node01 --net elastic -p 9200:9200 -p 9300:9300 -t docker.elastic.co/elasticsearch/elasticsearch:8.6.1
 
 kibana:
 docker pull docker.elastic.co/kibana/kibana:8.6.1
-docker run --name kib-01 --net elastic -p 5601:5601 docker.elastic.co/kibana/kibana:8.6.1
+docker run -itd --name kib-01 --net elastic -p 5601:5601 docker.elastic.co/kibana/kibana:8.6.1
 
 password:
 docker exec -it es-node01 /usr/share/elasticsearch/bin/elasticsearch-reset-password -u elastic
