--- a/readme
+++ b/readme
@@ -16,13 +16,17 @@ token:
 docker exec -it es-node01 /usr/share/elasticsearch/bin/elasticsearch-create-enrollment-token -s kibana
 
 filebeat:
-sudo docker pull docker.elastic.co/beats/filebeat:8.6.1
-sudo docker run -itd --name filebeat01 -\ 
-docker.elastic.co/beats/filebeat:8.6.1 \
-setup -E setup.kibana.host=10.117.4.173:80 \
--E output.elasticsearch.hosts=["10.117.4.173:9200"]
+curl -L -O https://raw.githubusercontent.com/elastic/beats/8.6/deploy/docker/filebeat.docker.yml
+docker run -d \
+  --name=filebeat \
+  --user=root \
+  --volume="$(pwd)/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro" \
+  --volume="/var/lib/docker/containers:/var/lib/docker/containers:ro" \
+  --volume="/var/run/docker.sock:/var/run/docker.sock:ro" \
+  docker.elastic.co/beats/filebeat:8.6.1 filebeat -e --strict.perms=false \
+  -E output.elasticsearch.hosts=["elasticsearch:9200"]
 
-
+ref: https://www.elastic.co/guide/en/beats/filebeat/current/running-on-docker.html
 
 install docker:
 sudo apt update
