--- a/readme
+++ b/readme
@@ -21,7 +21,7 @@ curl -L -O https://raw.githubusercontent.com/elastic/beats/8.6/deploy/docker/fil
 docker run -d \
   --name=filebeat \
   --user=root \
-  --volume="$(pwd)/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro" \
+  --volume="$(pwd)/filebeat.docker.yml:/usr/share/filebeat/filebeat.yml:ro" \
   --volume="/var/lib/docker/containers:/var/lib/docker/containers:ro" \
   --volume="/var/run/docker.sock:/var/run/docker.sock:ro" \
   docker.elastic.co/beats/filebeat:8.6.1 filebeat -e --strict.perms=false \
