--- a/readme
+++ b/readme
@@ -20,7 +20,7 @@ filebeat:
 curl -L -O https://raw.githubusercontent.com/elastic/beats/8.6/deploy/docker/filebeat.docker.yml
 docker run -d \
   --name=filebeat \
-  --net elastic 
+  --net elastic \
   --user=root \
   --volume="$(pwd)/filebeat.docker.yml:/usr/share/filebeat/filebeat.yml:ro" \
   --volume="/var/lib/docker/containers:/var/lib/docker/containers:ro" \
