--- a/readme
+++ b/readme
@@ -6,6 +6,8 @@ docker network create elastic
 docker pull docker.elastic.co/elasticsearch/elasticsearch:8.6.1
 docker run -itd --name es-node01 --net elastic -p 9200:9200 -p 9300:9300 -t docker.elastic.co/elasticsearch/elasticsearch:8.6.1
 
+docker run -itd --name es-node01 --user=root --net elastic --volume="$(pwd)/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro" -p 9200:9200 -p 9300:9300 -t docker.elastic.co/elasticsearch/elasticsearch:8.6.1
+
 kibana:
 docker pull docker.elastic.co/kibana/kibana:8.6.1
 docker run -itd --name kib-01 --net elastic -p 5601:5601 docker.elastic.co/kibana/kibana:8.6.1
